--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,19 @@
+#PROJECT NAME
 project(QuarkPlasma)
 cmake_minimum_required(VERSION 2.8)
-aux_source_directory(. SRC_LIST)
+
+#EXTERNAL PACKAGES (IRRLICHT)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 find_package(Irrlicht REQUIRED)
-include_directories(${Irrlicht_INCLUDE_DIRECTORY})
-add_executable(${PROJECT_NAME} ${SRC_LIST})
-target_link_libraries(${PROJECT_NAME} ${Irrlicht_LIBRARY})
+
+#INCLUDES & SRC FILES
+include_directories(
+    ${Irrlicht_INCLUDE_DIRECTORY}
+    ${PROJECT_SOURCE_DIR}/include
+)
+file(GLOB SRCS src/*.cpp)
+file(GLOB HDRS include/*.h)
+
+#LINKING AND EXECUTABLE
+add_executable(${PROJECT_NAME} ${SRCS} ${HDRS})
+target_link_libraries(${PROJECT_NAME} ${IRRLICHT_LIBRARIES})
