--- a/quark-plasma.vcxproj
+++ b/quark-plasma.vcxproj
@@ -50,6 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <AdditionalUsingDirectories>D:\Tests\quark-plasma\include;%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -59,6 +60,7 @@
     </Link>
     <PostBuildEvent>
       <Command>copy VisualStudio\irrlicht-1.8\bin\Win32-VisualStudio\Irrlicht.dll .\bin\</Command>
+      <Message>Copying Irrlicht DLL file in the binary directory</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
