Cleaned up main.cpp, prepare game architecture

--- a/VisualStudio/quark-plasma.vcxproj
+++ b/VisualStudio/quark-plasma.vcxproj
@@ -83,6 +83,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Application.cpp" />
     <ClCompile Include="..\src\Bullet.cpp" />
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
@@ -90,6 +91,7 @@
     <None Include="irrlicht-1.8\lib\win32-gcc\libIrrlicht.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\Application.h" />
     <ClInclude Include="..\include\Bullet.h" />
     <ClInclude Include="irrlicht-1.8\include\aabbox3d.h" />
     <ClInclude Include="irrlicht-1.8\include\CDynamicMeshBuffer.h" />
