--- a/VisualStudio/quark-plasma.vcxproj.filters
+++ b/VisualStudio/quark-plasma.vcxproj.filters
@@ -550,6 +550,9 @@
     <ClInclude Include="..\include\Bullet.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Application.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="include">
@@ -572,6 +575,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Application.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
